<resources>
    <string name="app_name">Game Suggestion</string>
    <string name="app_name2">Game\nSuggestion</string>
    <string name="search_page">Search Page</string>
    <string name="show_user">Show User</string>
    <string name="user_panel">User Panel</string>
    <string name="map">Where Am I</string>
    <string name="change">Change</string>
    <string name="chooses_genre">Chooses Genre</string>
    <string name="game">Suggest Games</string>
    <string name="readme">Readme</string>
    <string name="logout">Logout</string>
    <string name="true1">True</string>
    <string name="false1">False</string>
    <string name="show_all_users">Show All Users</string>
    <string name="edit">Edit User</string>
    <string name="hello_world">HELLO WORLD</string>
    <string name="search_bar_text">Type Here...</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="picture">Picture</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_up_error_1">Username Is Empty</string>
    <string name="sign_up_error_2">Password Is Empty</string>
    <string name="sign_up_error_3">First Name Is Empty</string>
    <string name="sign_up_error_4">Last Name Is Empty</string>
    <string name="sign_up_error_5">Street Is Empty</string>
    <string name="sign_up_error_6">Email Is Empty</string>
    <string name="sign_up_error_7">Username Already Exists</string>
    <string name="sign_up_error_8">No Picture</string>
    <string name="login_error_1">Username And/Or Password Is Incorrect</string>
    <string name="readme_desc">Game Suggestion is an app that will help its users find games that they enjoy and will help their overall experience with the world of gaming</string>
    <string name="title_activity_maps">Map</string>
    <string name="admin">Admin</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="take_picture">Take Picture</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="sign_up_successful">Sign Up Successful</string>
</resources>
