<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/sign_up"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.example.ofir.gamesuggestion.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                style="@style/editText2"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1"
                android:hint="@string/username"/>

            <EditText
                android:id="@+id/password"
                style="@style/editText2"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/picture"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/picture"
            android:onClick="pickPicture"
            android:src="@drawable/game_suggest_icon"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/first_name"
            style="@style/editText2"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/first_name"/>

        <EditText
            android:id="@+id/last_name"
            style="@style/editText2"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/last_name"/>
    </LinearLayout>


    <EditText
        android:id="@+id/street"
        style="@style/editText2"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:hint="@string/street"/>

    <EditText
        android:id="@+id/email"
        style="@style/editText2"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_weight="0.7"
        android:maxLines="7"
        android:scrollbars="vertical"
        android:textColor="#ff0000"/>

    <Button
        android:id="@+id/button"
        style="@style/button1"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_weight="1"
        android:onClick="done"
        android:text="@string/done"/>
</LinearLayout>
