<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/show_all_users"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.example.ofir.gamesuggestion.ShowAllUsers">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="10sp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username"
            style="@style/textText2"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username"/>

        <TextView
            android:id="@+id/password"
            style="@style/textText2"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password"/>

        <TextView
            android:id="@+id/admin"
            style="@style/textText2"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/admin"/>
    </LinearLayout>

    <ListView
        android:id="@+id/all_users_list"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="20sp"
        android:layout_weight="6"/>


    <Button
        style="@style/button1"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:onClick="back"
        android:text="@string/back"/>

</LinearLayout>
