<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/user_panel"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.example.ofir.gamesuggestion.UserPanel">

    <Button
        style="@style/button1"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:onClick="showUser"
        android:text="@string/show_user"/>

    <Button
        style="@style/button1"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:onClick="editUser"
        android:text="@string/edit"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="5"/>

    <Button
        style="@style/button1"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:onClick="back"
        android:text="@string/back"/>

</LinearLayout>
